--- a/css/admin.css
+++ b/css/admin.css
@@ -1,3 +1,9 @@
 #user-2 {
 	display: none;
 }
+
+#editorcontainer textarea#content {
+	font-size: 16px;
+	font-family: Georgia, \"Times New Roman\", Times, serif;
+	color: #333;
+}
