--- a/css/admin.css
+++ b/css/admin.css
@@ -1,9 +1,10 @@
-#user-2 {
-	display: none;
-}
-
+/* change style default editor */
 #editorcontainer textarea#content {
 	font-size: 16px;
-	font-family: Georgia, \"Times New Roman\", Times, serif;
+	font-family: Georgia, "Times New Roman", Times, serif;
 	color: #333;
+}
+/* hide user with id2 from users menu */
+#user-2 {
+	display: none;
 }
