add theme description

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: 	WP Easy
-Theme URI: 		http://saitobaza.ru
-Description: 	Здравствуйте! Если нужно что-то подправить, добавить или отверстать новую тему - обращайтсь icq 633308800 или aparserok@gmail.com
-Version: 		1.2.6
-Author: 		aparserok
+Theme URI: 		https://github.com/crazyyy/wp-easy
+Description: 	Приветствую. <br />Тема создана для удобной интеграции шаблонов в WordPress, поддерживает все современыне фишки, минимизированная.<br />Если вам нужна интеграция вашего шаблона на WP, верстка или внести правки - обращайтесь в поддержку - http://saitobaza.ru/, icq 633-308-800 
+Version: 		14-02-12
+Author: 		crazyyy and others
 Author URI: 	http://saitobaza.ru/
 Tags: 			HTML5, CSS3
 
